# nanoLLaDA

./: .gitignore  README.md  pyproject.toml  run.sh  tutorial.ipynb
nanollada/: checkpoint.py  common.py  dataloader.py  dataset.py  diffusion.py  eval.py  generate.py  model.py  sft.py  tokenizer.py
scripts/: eval.py  inference.py  sft.py  tok_train.py  train.py
